// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiAvatar allows a name composed entirely of whitespace 1`] = `
<div
  aria-label="aria-label"
  class="wuiAvatar wuiAvatar--m wuiAvatar--user testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-image:none;background-color:#ee789d;color:#000000"
  title="  "
>
  <span
    aria-hidden="true"
  >
      
  </span>
</div>
`;

exports[`WuiAvatar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="wuiAvatar wuiAvatar--m wuiAvatar--user testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`WuiAvatar props color is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--m wuiAvatar--user"
  style="background-image:none;background-color:#000;color:#FFFFFF"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`WuiAvatar props imageUrl is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--m wuiAvatar--user"
  style="background-image:url(image url);background-color:#e4a6c7;color:#000000"
  title="name"
/>
`;

exports[`WuiAvatar props initials is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--m wuiAvatar--user"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    l
  </span>
</div>
`;

exports[`WuiAvatar props initialsLength is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--m wuiAvatar--user"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    na
  </span>
</div>
`;

exports[`WuiAvatar props size l is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--l wuiAvatar--user"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`WuiAvatar props size m is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--m wuiAvatar--user"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`WuiAvatar props size none is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--user"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`WuiAvatar props size s is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--s wuiAvatar--user"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`WuiAvatar props size xl is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--xl wuiAvatar--user"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`WuiAvatar props type is rendered 1`] = `
<div
  aria-label="name"
  class="wuiAvatar wuiAvatar--m wuiAvatar--space"
  style="background-image:none;background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`WuiAvatar should throw error if color is not a hex 1`] = `"WuiAvatar needs to pass a valid color. This can either be a three or six character hex value"`;
